# tsurface

./: CMakeLists.txt  README  README.md  sonar-project.properties  tsurface.kdev4
.github/workflows/: sonarcxx.yaml
src/: CMakeLists.txt  borders.qrc  expand.cpp  expand.h  fonts.qrc  main.cpp  readtp4.cpp  sliders.qrc  sounds.qrc  taddpagedialog.cpp  taddpagedialog.h  taddpagedialog.ui  taddpopupdialog.cpp  taddpopupdialog.h  taddpopupdialog.ui  tbitmapdialog.cpp  tbitmapdialog.h  tbitmapdialog.ui  tbitmapselectdialog.cpp  tbitmapselectdialog.h  tbitmapselectdialog.ui  tcanvaswidget.cpp  tcanvaswidget.h  tcharactermapdialog.cpp  tcharactermapdialog.h  tcharacterwidget.cpp  tcharacterwidget.h  tcheckerboardwidget.cpp  tcheckerboardwidget.h  tcomboboxitemdelegate.cpp  tcomboboxitemdelegate.h  tcombobutton.cpp  tcombobutton.h  tconfig.cpp  tconfig.h  tconfmain.cpp  tconfmain.h  tconvertcolors.cpp  tconvertcolors.h  tconverticons.cpp  (+142 more)
src/images/: show_channels.xcf  toolbar_screen.xcf  tsurface.xcf
